# platform.core.location.lbs-dbus

./: AUTHORS  CMakeLists.txt  lbs-dbus.pc.in  project.config
agps/: CMakeLists.txt
agps/include/: lbs_agps.h  lbs_agps_priv.h
agps/src/: lbs_agps.c
client/: CMakeLists.txt
client/include/: lbs_dbus_client.h  lbs_dbus_client_priv.h
client/src/: lbs_dbus_client.c
introspection/: gen.sh  lbs.xml  lbs_batch.xml  lbs_gps_geofence.xml  lbs_nmea.xml  lbs_position.xml  lbs_satellite.xml
packaging/: lbs-dbus.changes  lbs-dbus.spec  liblbs-dbus.changes  liblbs-dbus.spec
server/: CMakeLists.txt
server/include/: lbs_dbus_server.h  lbs_dbus_server_priv.h
server/res/: lbs-dbus-server.conf  lbs-dbus-server.conf.cmake  lbs-dbus-server.conf.in
server/src/: lbs_dbus_server.c
