CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(lbs-agps C)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

### Build ###
SET(SRCS
	src/lbs_agps.c
)

ADD_LIBRARY(lbs-agps SHARED ${SRCS})
TARGET_LINK_LIBRARIES(lbs-agps ${pkgs_LDFLAGS})
SET_TARGET_PROPERTIES(lbs-agps PROPERTIES VERSION 0.1.0 SOVERSION 0 OUTPUT_NAME lbs-agps)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/lbs_agps.h DESTINATION include/lbs-dbus)
INSTALL(TARGETS lbs-agps DESTINATION lib COMPONENT Runtime)
