CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(lbs-dbus-client C)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

### Build ###
SET(SRCS
	src/lbs_dbus_client.c
)

ADD_LIBRARY(lbs-dbus SHARED ${SRCS})
TARGET_LINK_LIBRARIES(lbs-dbus ${pkgs_LDFLAGS})
SET_TARGET_PROPERTIES(lbs-dbus PROPERTIES VERSION 0.1.0 SOVERSION 0 OUTPUT_NAME lbs-dbus)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/lbs_dbus_client.h DESTINATION include/lbs-dbus)
INSTALL(TARGETS lbs-dbus DESTINATION lib COMPONENT Runtime)
#ADD_SUBDIRECTORY(test_src)
